// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Data Display/Tag Border smoke-test 1`] = `
<div style="display: flex; gap: 8px;">
  <span class="_tag_fo9cs_325 _tag--color-normal_fo9cs_337 _tag--border_fo9cs_334">
    Normal
  </span>
  <span class="_tag_fo9cs_325 _tag--color-processing_fo9cs_346 _tag--border_fo9cs_334">
    Processing
  </span>
  <span class="_tag_fo9cs_325 _tag--color-success_fo9cs_356 _tag--border_fo9cs_334">
    Success
  </span>
  <span class="_tag_fo9cs_325 _tag--color-error_fo9cs_366 _tag--border_fo9cs_334">
    Error
  </span>
  <span class="_tag_fo9cs_325 _tag--color-warning_fo9cs_376 _tag--border_fo9cs_334">
    Warning
  </span>
</div>
`;

exports[`Data Display/Tag Hover smoke-test 1`] = `
<div style="display: flex; gap: 8px;">
  <span class="_tag_fo9cs_325 _tag--color-normal_fo9cs_337 _tag--hover_fo9cs_331">
    Normal
  </span>
  <span class="_tag_fo9cs_325 _tag--color-processing_fo9cs_346 _tag--hover_fo9cs_331">
    Processing
  </span>
  <span class="_tag_fo9cs_325 _tag--color-success_fo9cs_356 _tag--hover_fo9cs_331">
    Success
  </span>
  <span class="_tag_fo9cs_325 _tag--color-error_fo9cs_366 _tag--hover_fo9cs_331">
    Error
  </span>
  <span class="_tag_fo9cs_325 _tag--color-warning_fo9cs_376 _tag--hover_fo9cs_331">
    Warning
  </span>
</div>
`;

exports[`Data Display/Tag NoBorder smoke-test 1`] = `
<div style="display: flex; gap: 8px;">
  <span class="_tag_fo9cs_325 _tag--color-normal_fo9cs_337">
    Normal
  </span>
  <span class="_tag_fo9cs_325 _tag--color-processing_fo9cs_346">
    Processing
  </span>
  <span class="_tag_fo9cs_325 _tag--color-success_fo9cs_356">
    Success
  </span>
  <span class="_tag_fo9cs_325 _tag--color-error_fo9cs_366">
    Error
  </span>
  <span class="_tag_fo9cs_325 _tag--color-warning_fo9cs_376">
    Warning
  </span>
</div>
`;
